Fixed the content overflowing footer in the Review-home component.

--- a/pc-point/src/app/review/review-home/review-home.component.css
+++ b/pc-point/src/app/review/review-home/review-home.component.css
@@ -1,16 +1,16 @@
 .container {
+  margin-top: 20px;
   min-height: 100%;
 }
 
 .split {
   height: 100%;
   width: 50%;
-  position: absolute;
+  /*position: absolute;*/
   /*z-index: 1;*/
   /*top: 0;*/
   /*overflow-x: hidden;*/
-  padding-top: 20px;
-  flex-direction: column;
+  /*flex-direction: column;*/
 
 }
 
@@ -27,13 +27,13 @@
 }
 
 /* If you want the content centered horizontally and vertically */
-.centered {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
+/*.centered {*/
+/*  position: relative;*/
+/*  top: 50%;*/
+/*  left: 50%;*/
+/*  transform: translate(-50%, -50%);*/
+/*  text-align: center;*/
+/*}*/
 
 h1,h2 {
   color: #f7f7f7;
@@ -43,7 +43,14 @@ h1,h2 {
   color: #f7f7f7;
 }
 
-.selected-reviews{
+.select-product{
+  position: relative;
+  margin-right: 0;
   margin-bottom: 20px;
 }
+
+.review-product{
+  position: relative;
+}
+
 
