--- a/pc-point/src/app/review/review-item/review-item.component.css
+++ b/pc-point/src/app/review/review-item/review-item.component.css
@@ -1,7 +1,8 @@
 article{
   border: rgb(20, 20, 59) 2px solid;
-  padding: 10px;
+  /*padding: 10px;*/
   border-radius: 4px;
+  height: auto;
 }
 
 a {
